# JL-Mod

./: .gitignore  .gitmodules  README.md  README_RU.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: custom.md  issue-template.md
.github/workflows/: android.yml  nightly.yml
app/: build.gradle  build.gradle.kts  dictionary.pro  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: licenses.html
app/src/main/assets/shaders/: color.fsh  color.vsh  sprite.fsh  sprite.vsh  tex.fsh  tex.vsh
app/src/main/cpp/: Android.mk
app/src/main/cpp/m3g/: Android.mk
app/src/main/cpp/micro3d/: Android.mk
app/src/main/cpp/mmapi/: Android.mk  PlayerListener.cpp  eas_mmapi.c  eas_mmapi.h  eas_mmapi_android.c  eas_mmapi_config.h  eas_mmapi_host.c  eas_mmapi_jni.c  eas_mmapi_kvm.c  eas_mmapi_midp.c  eas_mmapi_types.h  eas_mmapi_wave.h  eas_mmapi_windows.c  eas_wavein.c  eas_wavein.h  eas_wavein_oboe.cpp  eas_waveout.c  eas_waveout.h  eas_waveout_oboe.cpp  mmapi_error.cpp  mmapi_error.h  mmapi_file.cpp  mmapi_file.h  mmapi_jni.cpp  mmapi_jstring.cpp  mmapi_jstring.h  mmapi_player.cpp  mmapi_player.h  mmapi_util.cpp  mmapi_util.h
app/src/main/cpp/mmapi_common/: Android.mk
app/src/main/cpp/mmapi_eas/: Android.mk  eas_file.cpp  eas_file.h  eas_player.cpp  eas_player.h  eas_player_jni.cpp  eas_strings.cpp  eas_strings.h  eas_util.cpp  eas_util.h
app/src/main/cpp/mmapi_tsf/: Android.mk  tsf_player.cpp  tsf_player.h  tsf_player_jni.cpp
app/src/main/cpp/sonivox/: Android.mk
app/src/main/cpp/tsf/: Android.mk  Player.cpp  Player.h  PlayerListener.cpp  PlayerListener.h  mmapi_jni.cpp
app/src/main/cpp/util/: Android.mk
app/src/main/res/drawable/: ic_action_apps_view_grid.xml  ic_action_apps_view_list.xml  ic_action_sort.xml  ic_setting_button_shape.xml  ic_setting_message.xml  ic_setting_translate.xml
app/src/main/res/layout/: activity_config.xml  activity_keymapper.xml  activity_micro.xml  activity_profiles.xml  dialog_input.xml  dialog_save_profile.xml  dialog_shader_tune.xml  dialog_shader_tune_item.xml  fragment_appslist.xml  fragment_donations.xml  fragment_installer.xml  list_row_grid_jar.xml  list_row_jar.xml  simple_list_item_multiple_choice.xml
app/src/main/res/menu/: main.xml  midlet_canvas.xml  midlet_canvas_no_bar.xml  midlet_displayable.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-bg/: strings.xml
app/src/main/res/values-bn/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-it/: strings.xml
dexlib/: build.gradle  build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
synthlib/: build.gradle
synthlib/src/main/cpp/: CMakeLists.txt  player.cpp  synthlib.cpp  util.h
synthlib/src/main/cpp/fluidsynth/lib/arm64-v8a/cmake/Ogg/: OggTargets-relwithdebinfo.cmake
synthlib/src/main/cpp/fluidsynth/lib/arm64-v8a/cmake/Opus/: OpusTargets.cmake
synthlib/src/main/cpp/fluidsynth/lib/arm64-v8a/cmake/SndFile/: SndFileTargets-relwithdebinfo.cmake  SndFileTargets.cmake
synthlib/src/main/cpp/fluidsynth/lib/arm64-v8a/glib-2.0/include/: glibconfig.h
synthlib/src/main/cpp/fluidsynth/lib/arm64-v8a/pkgconfig/: fluidsynth.pc  oboe-1.0.pc  ogg.pc
synthlib/src/main/cpp/fluidsynth/lib/armeabi-v7a/cmake/Opus/: OpusConfigVersion.cmake
synthlib/src/main/cpp/fluidsynth/lib/armeabi-v7a/cmake/SndFile/: SndFileConfig.cmake  SndFileConfigVersion.cmake
synthlib/src/main/cpp/fluidsynth/lib/armeabi-v7a/pkgconfig/: fluidsynth.pc  gio-2.0.pc  gio-unix-2.0.pc  glib-2.0.pc  gmodule-no-export-2.0.pc  gobject-2.0.pc  libinstpatch-1.0.pc  opus.pc
synthlib/src/main/cpp/fluidsynth/lib/x86/cmake/Ogg/: OggConfigVersion.cmake
synthlib/src/main/cpp/fluidsynth/lib/x86/cmake/Opus/: OpusConfig.cmake
synthlib/src/main/cpp/fluidsynth/lib/x86/cmake/Vorbis/: VorbisConfigVersion.cmake  VorbisTargets-relwithdebinfo.cmake  VorbisTargets.cmake
synthlib/src/main/cpp/fluidsynth/lib/x86/glib-2.0/include/: glibconfig.h
synthlib/src/main/cpp/fluidsynth/lib/x86/pkgconfig/: flac.pc  fluidsynth.pc  gthread-2.0.pc  libffi.pc
synthlib/src/main/cpp/fluidsynth/lib/x86_64/cmake/Ogg/: OggTargets.cmake
synthlib/src/main/cpp/fluidsynth/lib/x86_64/cmake/Opus/: OpusConfigVersion.cmake  OpusTargets-relwithdebinfo.cmake
synthlib/src/main/cpp/fluidsynth/lib/x86_64/cmake/SndFile/: SndFileConfigVersion.cmake
synthlib/src/main/cpp/fluidsynth/lib/x86_64/glib-2.0/include/: glibconfig.h
synthlib/src/main/cpp/fluidsynth/lib/x86_64/pkgconfig/: fluidsynth.pc  gmodule-export-2.0.pc  sndfile.pc  vorbis.pc  vorbisenc.pc  vorbisfile.pc
(+466 files in other folders)
